TTA耗时统计优化，ReAct循环检测重复工具调用，限制ReAct迭代次数，补充dsAPI模型选项